<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:visibility="visible">

    <FrameLayout
        android:layout_width="150dp"
        android:layout_height="90dp"
        android:id="@+id/FrameLayout"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/songNameEditText"
            android:hint="@string/name"
            android:layout_gravity="left|top"
            android:singleLine="true"
            android:minLines="1"
            android:maxLines="1"
            android:maxLength="25"
            android:lines="1"
            android:textIsSelectable="false" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:layout_gravity="center_horizontal|bottom">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/minsEditText"
                android:layout_gravity="left|bottom"
                android:hint="@string/mm"
                android:lines="1"
                android:maxLines="1"
                android:maxLength="2"
                android:minLines="1"
                android:textIsSelectable="false"
                android:singleLine="true"
                android:textAlignment="textEnd" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/secsEditText"
                android:layout_gravity="right|bottom"
                android:maxLines="1"
                android:maxLength="2"
                android:minLines="1"
                android:hint="@string/ss"
                android:textIsSelectable="false"
                android:singleLine="true"
                android:textAlignment="textEnd" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/colon"
                android:id="@+id/ColonTextView"
                android:layout_gravity="center"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </FrameLayout>

    </FrameLayout>

</RelativeLayout>