<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:visibility="visible">

    <LinearLayout
        android:id="@+id/FrameLayout"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="20dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp">

            <Button
                android:id="@+id/eventColorIndicator"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="left|center_vertical"
                android:background="@color/colorPractice" />

            <Spinner
                android:id="@+id/eventSpinner"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical|right"
                android:dropDownWidth="180dp"
                android:visibility="visible" />

        </FrameLayout>

        <EditText
            android:id="@+id/eventNameEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:maxLength="15"
            android:maxLines="1"
            android:minLines="1"
            android:singleLine="true"
            android:visibility="visible" />


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/editEventSetDateButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:clickable="true"
                android:elevation="5dp"
                android:ellipsize="none"
                android:onClick="onClickEditEventSetDate"
                android:singleLine="true"
                android:text="@string/set_date"
                android:textColor="#ffffff"
                android:textSize="13sp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/dateTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:lines="1"
                android:maxLines="1"
                android:minLines="1"
                android:singleLine="true"
                android:textAlignment="textEnd"
                android:textSize="15sp" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical">

                <TextView
                    android:id="@+id/colonTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/colon"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/eventMinsEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center_vertical"
                    android:hint="@string/mm"
                    android:maxLength="2"
                    android:maxLines="1"
                    android:minLines="1"
                    android:singleLine="true"
                    android:textAlignment="textEnd"
                    android:textIsSelectable="false" />

                <EditText
                    android:id="@+id/eventHourEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center_vertical"
                    android:hint="@string/hh"
                    android:lines="1"
                    android:maxLength="2"
                    android:maxLines="1"
                    android:minLines="1"
                    android:singleLine="true"
                    android:textAlignment="textEnd"
                    android:textIsSelectable="false" />

            </FrameLayout>

            <Spinner
                android:id="@+id/amPmSpinner"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_gravity="right|center_vertical"
                android:dropDownWidth="60dp"
                android:visibility="visible" />
        </FrameLayout>

        <EditText
            android:id="@+id/locationEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/location"
            android:maxLength="15"
            android:maxLines="1"
            android:minLines="1"
            android:singleLine="true" />

    </LinearLayout>

</FrameLayout>